refactor & update dependencies